--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # Site settings
-baseurl = "https://example.org/"
+baseurl = ""
 languageCode = "en-us"
 title = "Douglas Delefrati"
 theme = "hugo-freelancer-theme"
