--- a/config.toml
+++ b/config.toml
@@ -20,16 +20,11 @@ paginate=3 # articles per page
 [[params.social]]
 name = "GitHub"
 icon = "github"
-url = "https://github.com/athul/archie"
+url = "https://github.com/deelefrati"
 
 [[params.social]]
-name = "Twitter"
-icon = "twitter"
-url = "https://twitter.com/athulcajay/"
-
-[[params.social]]
-name = "GitLab"
-icon = "gitlab"
+name = "LinkedIn"
+icon = "linkedin"
 url = "https://gitlab.com/athul/"
 
 # Main menu Items
